Exercise B4 - Creating page types with a shared layout and navigation

--- a/AlloyTraining/Views/Shared/Layouts/_Root.cshtml
+++ b/AlloyTraining/Views/Shared/Layouts/_Root.cshtml
@@ -30,14 +30,7 @@
                         <img src="/gfx/logotype.png" />
                     </div>
                     <div class="span10">
-                        @if (User.Identity.IsAuthenticated)
-                        {
-                            <a href="/en/logout">Log out</a>
-                        }
-                        else
-                        {
-                            <a href="/util/login?ReturnUrl=@Model.CurrentPage.PageLink.ExternalURLFromReference()">Log in</a>
-                        }
+                        @await Html.PartialAsync("_NavigationMenu")
                     </div>
                 </div>
             </div>
